# plugin-UE4

./: .gitignore  LICENSE  LabStreamingLayer.uplugin  README.md  build_liblsl_for_ue.sh  zip_marketplace.py
Config/: FilterPlugin.ini
Source/LSL/: LSL.Build.cs
Source/LSL/Classes/: LSLInletComponent.h  LSLOutletComponent.h
Source/LSL/Private/: FLSL.cpp  LSLInletComponent.cpp  LSLOutletComponent.cpp  LSLPrivatePCH.h
Source/LSL/Public/: FLSL.h  LSLInletComponent.h  LSLOutletComponent.h  LSLTypes.h
Tests/: CMakeLists.txt  SimpleControlSignalOutlet.py  test_inlet.cpp  test_outlet.cpp
